--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -14,7 +14,7 @@
 
     <div class="detail">
         <h4>상세페이지</h4>
-        <img src="https://placehold.co/300">
+        <img th:src="@{${item.imgUrl}}" alt="no image"/>
         <div th:text="${item.id}">id</div>
         <div th:text="${item.title}">상품</div>
         <p th:text="${item.price} + 원">금액</p>
