--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -11,36 +11,17 @@
 <body>
     <div class="nav" th:replace="~{ nav.html::navbar }"></div>
 
-    <form action="/add" method="POST">
+    <form action="/add" method="POST" enctype="multipart/form-data">
         <input name="title" placeholder="상품명" >
         <input name="price" placeholder="금액">
-        <input type="hidden" name="imgUrl">
-        <input type="file" onchange="getURL(this)">
+<!--        <input type="hidden" name="file">-->
+        <label for="imageFile" class="form-label">이미지 파일</label>
+        <input type="file" name="imageFile" id="imageFile">
+
         <button type="submit">전송</button>
         <p>이미지 예시</p>
         <img src="">
     </form>
 
-<script>
-    async function getURL(e){
-        let name = encodeURIComponent(e.files[0].name)
-        let result = await fetch('presigned-url?filename=' + name)
-        result = await result.text()
-
-        let 결과 = await fetch(result, {
-        method : 'PUT',
-        body : e.files[0]
-        })
-
-        console.log(결과);
-        console.log(결과.url.split("?")[0]);
-
-        if(결과.ok){
-            document.querySelector('img').src = 결과.url.split("?")[0]
-            document.querySelector('input[name="imgUrl"]').value = result.split("?")[0];
-        }
-
-    }
-</script>
 </body>
 </html>
